# commitizen-lrplugin

./: CHANGELOG.md  pyproject.toml
tests/: test_lrplugin_version_provider.py
