[tool.poetry]
name = "commitizen-lrplugin"
version = "0.1.0"
description = ""
authors = ["Karsten Silkenbäumer <993392+kassi@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "commitizen_lrplugin", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
