[tool.poetry]
name = "commitizen-lrplugin"
version = "0.0.0"
description = "Commitizen version provider for Lua Lightroom plug-ins."
authors = ["Karsten Silkenbäumer <993392+kassi@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "commitizen_lrplugin", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
